--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^2.0.7",
     "sequelize": "^6.6.2",
     "socket.io": "^4.1.2",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0"
   },
   "devDependencies": {}
