--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-socket.io-session": "^1.3.5",
     "flash-messenger": "^1.1.1",
     "google-auth-library": "^7.2.0",
+    "handlebars-paginate": "^0.1.0",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
