--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.6.2",
     "passport": "^0.4.1",
