--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
     "country-region-dropdown-menu": "^2.2.1",
+    "dateformat": "^4.5.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "email-validator": "^2.0.4",
